# ELFReader

./: CMakeLists.txt  README.md
include/: binary_context.h  binary_function.h  elf-header.h  elf-reader.h  elf-section.h  elf-segment.h  elf-symtab.h  elf-types.h  elf_header.h  elf_reader.h  elf_section.h  elf_segment.h  elf_symtab.h  elf_types.h  rewrite_instance.h  utils.h
include/elf/: elf_header.h  elf_reader.h  elf_section.h  elf_symtab.h  utils.h
lib/: binary_context.cpp  binary_function.cpp  rewrite_instance.cpp
tools/driver/: elf-reader  elf-reader.cpp  elf_reader.cpp  test  test.msb
